fix(client)/ add scrollbars for criminals and leaderboard, translate to hebrew

--- a/apps/client/src/components/card/card.module.css
+++ b/apps/client/src/components/card/card.module.css
@@ -1,11 +1,11 @@
 .card {
   display: flex;
-  width: 25vw;
   border: 2px solid black;
   border-radius: 2.5%;
   align-items: center;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   background-color: rgba(255, 255, 255, 0.7);
   width: 30%;
+  height: 100%;
 }
