--- a/apps/client/src/components/criminals-card/criminals-card.module.css
+++ b/apps/client/src/components/criminals-card/criminals-card.module.css
@@ -2,4 +2,16 @@
   font-size: 1.75rem;
   size: fit-content;
   background-color: transparent;
+  text-align: center;
+}
+
+.cardContent {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.criminalsContent {
+  overflow-y: auto;
 }
