--- a/apps/client/src/components/leaderboard-card/leaderboard-card.module.css
+++ b/apps/client/src/components/leaderboard-card/leaderboard-card.module.css
@@ -2,15 +2,14 @@
   font-size: 1.75rem;
   size: fit-content;
   background-color: transparent;
+  text-align: center;
 }
 
 .global_scores {
-  position: absolute;
-  bottom: 2%;
   justify-content: center;
   height: 4rem;
-  width: 25%;
-  /* padding: 0.5%; */
+  width: 60%;
+  margin-bottom: 2%;
   display: flex;
   gap: 7%;
   border: solid 2px black;
@@ -39,4 +38,12 @@
   font-size: 2rem;
   text-align: center;
   font-weight: bold;
+}
+
+.cardContent {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  height: calc(100% - 5rem);
 }
