--- a/apps/client/src/components/user-result/user-result.module.css
+++ b/apps/client/src/components/user-result/user-result.module.css
@@ -1,7 +1,7 @@
 .results_box {
   border: solid 2px;
   border-radius: 5%;
-  width: 80%;
+  width: 90%;
   height: 3rem;
   display: flex;
   justify-content: space-between;
